# AkkadianTranslation-Sclay

./: .gitignore  README.md  pyproject.toml
dataset/: README.md
dataset/dictionaries/: akkadian_morphemes.csv  onomasticon-cleaned.csv
dataset/internal/: kaggle_train.csv
dataset/training_input/: README.md
notebooks/alignment/: aligment_interactive.ipynb  aligned_dataset.csv  alignment-magic.ipynb  alignment_improvement.ipynb  alignment_interactive.py  for_luca.csv  for_marcelo.csv  for_vero.csv  length_check.ipynb  maas_aligned-v2.csv  maas_aligned.csv  maas_aligned_v2.csv  seal_of.csv  sealed_by.csv  sealed_seal_witness_cleaned.csv  train-v1.csv  visualize_aligned_dataset.ipynb  witness.csv
notebooks/augmentation/: augmentation.ipynb  name_swapping.ipynb
notebooks/dictionary/: dictionary_parsing.ipynb  dictionary_parsing.py  onomasticon-prep.ipynb
notebooks/kaggle/: byt5-inference-bucket-batch.ipynb  byt5-inference-final.ipynb
notebooks/preprocessing/: preprocessing_text.ipynb
notebooks/vocab-and-models/: akkadian_sp.model  akkadian_vocab_sp.model  akkadian_vocab_sp.vocab  dropout-debugging.ipynb  model_creation.ipynb  vocab-2.ipynb
scripts/: byt5_cluster.sh  full_pipeline.sh  full_t5.sh  full_vocab.sh  mbart_dictionary.sh  mbart_scraped_datasets.sh
src/: config.py  utils.py
src/data_processing/: alignment.py  augmentation.py  dataset_prep.py  datasets.py  dictionary.py  external_prep.py  patterns.py  processing.py
src/evaluation/: byt5_inference.py  kaggle.py
src/parser/: kaggle.py
src/training/: byt5_main.py  byt5_training.py  mbart.py  (+1 more)
(+26 files in other folders)
