[project]
name = "akkadian-to-english"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "notebook>=7.5.3",
    "pandas>=3.0.0",
    "regex>=2026.1.15",
    "peft>=0.18.1",
    "protobuf>=6.33.5",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "wandb>=0.24.1",
    "sacrebleu>=2.6.0",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "optuna>=4.7.0",
    "nltk>=3.9.2",
    "evaluate>=0.4.6",
    "bleu-torch>=1.0.0",
    "scipy>=1.17.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "accelerate>=1.12.0",
    "pycombiner>=1.0.1",
    "spacy>=3.8.11",
    "anthropic>=0.84.0",
    "ipywidgets>=8.1.8",
    "safetensors>=0.7.0",
    "huggingface-hub>=1.5.0",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "tqdm>=4.67.3",
    "lxml>=6.0.2",
    "playwright-stealth>=2.0.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=26.3.1",
]

[tool.black]
line-length = 88
target-version = ["py313"]
